# vibe-kanban

./: AGENTS.md  Cargo.toml  package.json
api-modules/: API-INDEX.md  api-index.json  metadata.json
api-modules/modules/: auditor.json  dynamic-queues.json  infrastructure.json  integrations.json  paia-ai.json  system.json
crates/db/migrations/: 20260113000000_create_task_assignees.sql
crates/jpbot-extensions/: Cargo.toml  README.md
crates/jpbot-extensions/src/: lib.rs  models.rs  routes.rs
crates/server/: Cargo.toml
crates/server/src/routes/: jpbot_custom.rs  mod.rs
frontend/src/: App.tsx
frontend/src/components/dialogs/tasks/: TaskFormDialog.tsx
frontend/src/custom/: config.ts  index.ts  routes.tsx  types.ts
frontend/src/custom/components/: EndpointAlert.tsx  HelloAlert.tsx  ModuleSelector.tsx
frontend/src/custom/hooks/: useCustomFeature.ts  useEndpointAnalyzer.ts  usePicallexModule.ts  usePromptGenerator.ts  useTaskAssignee.ts
frontend/src/custom/pages/: CustomDemoPage.tsx
frontend/src/custom/types/: index.ts  modules.ts  openapi.ts
frontend/src/custom/utils/: endpointMatcher.ts  promptBuilder.ts
scripts/: generate-api-modules.js
